assets/css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

* {
    padding: 0%;
    margin: 0%;
    list-style-type: none;
    text-decoration: none;
    box-sizing: border-box;
    /* outline: 1px dotted red;    */
}


.w-100 {
    width: 100%;
}


.text-white {
    color: #fff;
}

.mb-24 {
    margin-bottom: 24px;
}

.greenish {
    color: rgba(59, 148, 94);
    text-shadow: none;
}

.d-flex {
    display: flex;
}

.align-item-center {
    align-items: center;
}

.justify-content {
    justify-content: center;
}

.min-vh-100 {
    min-height: 100vh;
}

li {
    display: inline-block;
    list-style: none;
    padding-left: 30px;

}


.section {
    background-image: url(./img/jungle-background.png);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
}

.top-shadow {
    background: linear-gradient(180deg, #000000 36.19%, rgba(0, 0, 0, 0) 100%);
    padding-top: 30px;
}


.flex-grow {
    flex-grow: 1;
}

.btn {
    background-color: rgba(255, 194, 10);
    color: #fff;
}

.first-p {
    font-family: "Roboto";
    font-size: 16px;
    font-weight: 600;
    line-height: 24px;
    text-align: left;
    color: rgba(255, 255, 255, 1);
    text-shadow: 0 2px 10px #fff;
}

.navbar-1 {
    display: flex;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;

}

li a {
    color: #fff;
    text-decoration: none;
    font-family: "Fira Sans";
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    text-align: left;

}

li a:hover {
    font-size: 18px;
    text-shadow: 0 3px 10px #fff;
}

.blur-part {
    backdrop-filter: blur(2px);

}

.heading {
    max-width: 645px;
    min-height: 231px;
    font-family: "Exo 2";
    font-size: 64px;
    font-weight: 700;
    line-height: 76.8px;
    text-align: left;
    color: rgba(255, 255, 255, 1);
    text-shadow: 0 3px 10px #fff;
}


.p-2 {
    max-width: 645px;
    min-height: 48px;
    font-family: "Fira Sans";
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    text-align: left;
    color: rgba(255, 255, 255, 1);
    text-shadow: 0 2px 10px #fff;
}

.btn-1 {
    background-color: rgba(255, 194, 10);
    color: #fff;
    border-radius: 2rem;
    padding-left: 20px;
    padding-right: 20px;
    border: none;
    font-family: Dela Gothic One;
    font-size: 16px;
    font-weight: 400;
    line-height: 23.17px;
    text-align: left;
    padding-top: 8px;
    padding-bottom: 8px;
    font-family: "Dela Gothic One";
}

.mobile-icons {
    font-size: 50px;
    position: static;
}

.btn-1:hover {
    box-shadow: 0 5px 10px #fff;
}

.menu-icon {
    color: #fff;
}

@media (max-width:767.98px) {
    .list {
        position: fixed;
        width: 100%;
        height: 100%;
        top: 0%;
        right: -100%;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 20px;
        background-color: rgb(62, 150, 188);
        display: flex;
        transition: all 200ms linear;
        z-index: 1;
    }

    .mobile-icons { 
        position: fixed;
        right: 5px;
        top: 5px;
    }

    .menu-icon {
        cursor: pointer;
        z-index: 2;
        color: #fff;

    }

    .list.show {
        right: 0;
    }

    @media (min-width:768px) {
        .d-md-none {
            display: none;
        }
    }

    li a:hover {
        font-size: 18px;
        text-shadow: 0 2px 5px #fff;
    }
}

@media (max-width:992px) {
    .flex-direction-992 {
        flex-direction: column-reverse;
    }
}

